Implement and expose Cache

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
-name = "decaf"
+name = "cache"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+ahash = "0.8"
+parking_lot = "0.12"
