Add required fields to publish to crates.io

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "cache"
 version = "0.1.0"
 edition = "2024"
+authors = ["Christian Schleifer <chr.schleifer@gmail.com>"]
+description = "High-performance thread-safe cache with a focus on simplicity."
+license = "MIT OR Apache-2.0"
+readme = "README.md"
 
 [dependencies]
 ahash = "0.8"
