--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "plain-cache"
 version = "0.1.1"
 edition = "2024"
 authors = ["Christian Schleifer <chr.schleifer@gmail.com>"]
-description = "High-performance thread-safe cache with a focus on simplicity"
+description = "Highly performant thread-safe cache with a focus on simplicity"
 license = "MIT OR Apache-2.0"
 readme = "README.md"
 
